--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-# Created by .ignore support plugin (hsz.mobi)
-/CMakeLists.txt
+CMakeLists.txt
 .idea/
 CMakeLists.txt
 cmake-build-debug/
@@ -8,7 +7,6 @@ cmake-build-debug/
 vgcore.*
 plazza
 a.out
-<<<<<<< HEAD
 .DS_Store
 index.htm
 compagny.csv
